<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.software5000</groupId>
    <artifactId>ma</artifactId>
    <version>1.0.0</version>
    <packaging>war</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <log4j.version>2.4</log4j.version>
        <spring.version>4.3.3.RELEASE</spring.version>
        <shiro.version>1.3.2</shiro.version>
    </properties>

    <build>
        <!--<finalName>mvc</finalName>-->
        <defaultGoal>install</defaultGoal>
        <directory>target</directory>
        <resources>
            <resource>
                <!--<targetPath></targetPath>-->
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>envs/*</exclude>
                </excludes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <!--<targetPath></targetPath>-->
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/**.java</exclude>
                </excludes>
                <filtering>true</filtering>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.3</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <configuration>
                        <!--<webappDirectory>target/qtt-advert</webappDirectory>-->
                        <warSourceDirectory>src/main/webapp</warSourceDirectory>
                        <warName>mvn-${profiles.active}</warName>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.mortbay.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>7.2.0.v20101020</version>
                    <configuration>
                        <!--<jvmArgs>-Xmx1024m -Xms1024m</jvmArgs>-->
                        <scanIntervalSeconds>0</scanIntervalSeconds>
                        <connectors>
                            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                                <port>82</port>
                                <maxIdleTime>6000000</maxIdleTime>
                            </connector>
                        </connectors>
                        <webAppConfig>
                            <contextPath>/</contextPath>
                        </webAppConfig>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.7.2</version>
                    <configuration>
                        <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
                        <additionalClasspathElements>
                            <additionalClasspathElement>
                                ${basedir}/target/test-classes
                            </additionalClasspathElement>
                        </additionalClasspathElements>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                        <excludes>
                            <exclude>**/TestConstants.java</exclude>
                        </excludes>
                        <forkMode>pertest</forkMode>
                    </configuration>
                </plugin>
            </plugins>

        </pluginManagement>
    </build>


    <profiles>
        <profile>
            <id>local</id>
            <properties>
                <profiles.active>local</profiles.active>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <filters>
                    <filter>src/main/resources/envs/local.properties</filter>
                </filters>
            </build>
        </profile>
        <profile>
            <id>jenkins</id>
            <properties>
                <profiles.active>jenkins</profiles.active>
            </properties>
            <build>
                <filters>
                    <filter>src/main/resources/envs/jenkins.properties</filter>
                </filters>
            </build>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <profiles.active>test</profiles.active>
            </properties>
            <build>
                <filters>
                    <filter>src/main/resources/envs/test.properties</filter>
                </filters>
            </build>
        </profile>
        <profile>
            <id>ftest</id>
            <properties>
                <profiles.active>ftest</profiles.active>
            </properties>
            <build>
                <filters>
                    <filter>src/main/resources/envs/ftest.properties</filter>
                </filters>
            </build>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <profiles.active>prod</profiles.active>
            </properties>
            <build>
                <filters>
                    <filter>src/main/resources/envs/prod.properties</filter>
                </filters>
            </build>
        </profile>
        <profile>
            <id>sonar</id>
            <properties>
                <!-- Optional URL to server. Default value is http://localhost:9000
                <sonar.host.url>
                    http://myserver:9000
                </sonar.host.url>-->
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <!-- test phase -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-mock</artifactId>
            <version>2.0.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.2.15</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>1.3.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.pagehelper</groupId>
            <artifactId>pagehelper</artifactId>
            <version>4.1.6</version>
        </dependency>
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>3.4.1</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.29</version>
        </dependency>
        <!-- 添加druid连接池包 -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>1.0.26</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.29</version>
        </dependency>
        <dependency>
            <groupId>jstl</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.7.21</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.8.9</version>
        </dependency>
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib</artifactId>
            <version>3.2.4</version>
        </dependency>

        <!-- 阿里大鱼短信sdk start-->
<!--        <dependency>-->
<!--            <groupId>aliyun</groupId>-->
<!--            <artifactId>java-sdk-core</artifactId>-->
<!--            <version>2.4.2</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>aliyun</groupId>-->
<!--            <artifactId>java-sdk-sms</artifactId>-->
<!--            <version>3.0.0</version>-->
<!--            <classifier>rc1</classifier>-->
<!--        </dependency>-->
        <!-- 阿里大鱼短信sdk end-->

        <!-- 微信支付sdk start-->
        <dependency>
            <groupId>cn.com.riversoft</groupId>
            <artifactId>weixin-pay</artifactId>
            <version>0.9.3</version>
        </dependency>
        <dependency>
            <groupId>cn.com.riversoft</groupId>
            <artifactId>weixin-mp</artifactId>
            <version>0.9.3</version>
        </dependency>
        <!-- 微信支付sdk end-->
        <!-- Google二维生成 start-->
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>javase</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom</artifactId>
            <version>1.1.3</version>
        </dependency>
        <!-- Google二维生成 end-->

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>4.1.1</version>
        </dependency>


        <!--<dependency>-->
            <!--<groupId>commons-httpclient</groupId>-->
            <!--<artifactId>commons-httpclient</artifactId>-->
            <!--<version>3.1</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>org.apache.shiro</groupId>
            <artifactId>shiro-core</artifactId>
            <version>${shiro.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.shiro</groupId>
            <artifactId>shiro-web</artifactId>
            <version>${shiro.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.shiro</groupId>
            <artifactId>shiro-spring</artifactId>
            <version>${shiro.version}</version>
        </dependency>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>4.33</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.octo.captcha</groupId>-->
<!--            <artifactId>jcaptcha</artifactId>-->
<!--            <version>1.0</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zscp</groupId>
            <artifactId>masterutil</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.15</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.9</version>
        </dependency>
        <dependency>
            <groupId>com.software5000</groupId>
            <artifactId>simple-orm-mybatis</artifactId>
            <version>1.0.1</version>
        </dependency>
    </dependencies>
</project>